# clova_tes

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  main.py  pyproject.toml  start.sh
app/: __init__.py  alaram.py  clovaOCR.py  test.py
app/dtos/: alaram_dto.py  clova_dto.py
app/routers/: alaram_router.py  clova_router.py  view_router.py
app/services/: alaram_service.py  clova_service.py
app/templates/: index.html
app/templates/clova/: clova.html  ocr_form.html
app/templates/wms/: wms_report.html
nginx/: nginx.conf
templates/: clova_ai.html  index.html  ocr_form.html  wms_report.html
